--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
     "author": "Scott Moore",
     "scripts": {
         "build": "snowpack build",
-        "develop": "snowpack dev"
+        "develop": "snowpack dev",
+        "format": "prettier --write ."
     },
     "devDependencies": {
         "@snowpack/plugin-react-refresh": "^2.4.0",
+        "@snowpack/plugin-typescript": "^1.2.1",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.2",
+        "prettier": "^2.2.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "snowpack": "^3.0.13"
+        "snowpack": "^3.0.13",
+        "typescript": "^4.2.3"
+    },
+    "dependencies": {
+        "@types/snowpack-env": "^2.3.3"
     }
 }
