--- a/package.json
+++ b/package.json
@@ -6,25 +6,21 @@
 		"build": "vite build",
 		"develop": "vite --host",
 		"format": "prettier --write .",
+		"lint": "eslint --ext .js,.jsx,.ts,.tsx ./ && stylelint ./**/*.css",
 		"preview": "vite preview --host"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^4.28.5",
+		"@typescript-eslint/parser": "^4.28.5",
+		"eslint": "^7.32.0",
 		"import-sort-style-module": "^6.0.0",
 		"prettier": "^2.3.2",
 		"prettier-plugin-import-sort": "^0.0.7",
+		"stylelint": "^13.13.1",
+		"stylelint-config-prettier": "^8.0.2",
+		"stylelint-config-standard": "^22.0.0",
+		"stylelint-order": "^4.1.0",
 		"typescript": "^4.3.5",
 		"vite": "^2.4.4"
-	},
-	"prettier": {
-		"endOfLine": "auto",
-		"pluginSearchDirs": [
-			"."
-		],
-		"useTabs": true
-	},
-	"importSort": {
-		".js, .jsx, .ts, .tsx": {
-			"style": "module"
-		}
 	}
 }
