--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,10 @@
 {
-	"extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+	"plugins": ["stylelint-order"],
+	"extends": [
+		"stylelint-config-standard",
+		"stylelint-config-prettier",
+		"stylelint-config-recess-order"
+	],
 	"rules": {
 		"color-hex-length": "long",
 		"indentation": "tab"
