--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
 	"private": true,
-	"name": "ece4094",
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	],
 	"scripts": {
-		"build": "",
-		"clean": "",
-		"develop": "",
-		"format": "",
-		"lint": ""
+		"build": "turbo run build",
+		"clean": "turbo run clean",
+		"develop": "turbo run develop --continue --parallel",
+		"format": "prettier --write .",
+		"test": "turbo run test"
+	},
+	"devDependencies": {
+		"@parcel/packager-ts": "^2.3.2",
+		"@parcel/transformer-typescript-types": "^2.3.2",
+		"prettier": "^2.5.1",
+		"turbo": "^1.1.6",
+		"typescript": "^4.6.2"
 	}
 }
