Experiment with pan and zoom in the editor

--- a/apps/editor/tsconfig.json
+++ b/apps/editor/tsconfig.json
@@ -1,5 +1,8 @@
 {
 	"$schema": "http://json.schemastore.org/tsconfig",
+	"compilerOptions": {
+		"types": ["react-dom/next", "react/next"]
+	},
 	"extends": "@ece4094/config/typescript/base.json",
 	"include": ["src"]
 }
