--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,15 @@
 {
 	"endOfLine": "auto",
 	"printWidth": 100,
-	"useTabs": true
+	"singleAttributePerLine": true,
+	"useTabs": true,
+
+	"overrides": [
+		{
+			"files": "*.html",
+			"options": {
+				"singleAttributePerLine": false
+			}
+		}
+	]
 }
