--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -1,15 +1,23 @@
 {
 	"name": "@ece4094/editor",
-	"source": "src/index.html",
 	"scripts": {
-		"develop": "parcel serve --port 8000",
-		"build": "parcel build"
+		"build": "vite build",
+		"develop": "vite",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"react": "^18.0.0-rc.3",
+		"react-dom": "^18.0.0-rc.3",
+		"react-feather": "^2.0.9"
 	},
 	"devDependencies": {
-		"@types/react": "^17.0.40",
-		"@types/react-dom": "^17.0.13",
-		"parcel": "^2.3.2",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"@types/react": "^17.0.43",
+		"@types/react-dom": "^17.0.14",
+		"@vitejs/plugin-react": "^1.2.0",
+		"autoprefixer": "^10.4.4",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.23",
+		"typescript": "^4.6.3",
+		"vite": "^2.8.6"
 	}
 }
