--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
 		"test": "turbo run test"
 	},
 	"devDependencies": {
-		"@parcel/packager-ts": "^2.3.2",
-		"@parcel/transformer-typescript-types": "^2.3.2",
-		"prettier": "^2.5.1",
-		"turbo": "^1.1.6",
-		"typescript": "^4.6.2"
+		"prettier": "^2.6.1",
+		"prettier-plugin-tailwindcss": "^0.1.8",
+		"turbo": "^1.1.6"
 	}
 }
