--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,7 +1,12 @@
 {
 	"$schema": "http://json.schemastore.org/tsconfig",
 	"compilerOptions": {
-		"types": ["react-dom/next", "react/next"]
+		"plugins": [
+			{
+				"name": "typescript-plugin-css-modules"
+			}
+		],
+		"types": ["react/next", "react-dom/next", "vite/client"]
 	},
 	"extends": "@ece4094/config/typescript/base.json",
 	"include": ["src"]
