--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"private": true,
+	"name": "ece4094",
 	"workspaces": [
 		"apps/*",
 		"packages/*"
@@ -13,7 +14,7 @@
 	},
 	"devDependencies": {
 		"prettier": "^2.6.1",
-		"prettier-plugin-tailwindcss": "^0.1.8",
+		"prettier-plugin-sort-imports": "npm:@trivago/prettier-plugin-sort-imports@^3.2.0",
 		"turbo": "^1.1.6"
 	}
 }
