--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,19 +8,19 @@
 		"immer": "^9.0.12",
 		"react": "^18.0.0-rc.3",
 		"react-dom": "^18.0.0-rc.3",
-		"react-feather-icons": "npm:react-feather@^2.0.9",
-		"y": "npm:yjs@^13.5.33",
+		"react-feather": "^2.0.9",
+		"yjs": "^13.5.33",
 		"y-protocols": "^1.0.5",
 		"y-websocket": "^1.4.0"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.43",
 		"@types/react-dom": "^17.0.14",
-		"ibm-plex-fonts": "npm:@ibm/plex@^6.0.0",
+		"@ibm/plex": "^6.0.0",
 		"postcss-preset-env": "^7.4.3",
 		"typescript": "^4.6.3",
 		"typescript-plugin-css-modules": "^3.4.0",
 		"vite": "^2.8.6",
-		"vite-plugin-react": "npm:@vitejs/plugin-react@^1.2.0"
+		"@vitejs/plugin-react": "^1.2.0"
 	}
 }
