--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"babel-loader": "^8.2.4",
 		"prettier": "^2.6.1",
 		"storybook-dark-mode": "^1.0.9",
-		"turbo": "^1.1.6"
+		"turbo": "^1.1.6",
+		"typescript": "^4.6.3",
+		"typescript-plugin-css-modules": "^3.4.0"
 	}
 }
