--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,7 +2,7 @@
 	"$schema": "http://json.schemastore.org/tsconfig",
 	"compilerOptions": {
 		"plugins": [{ "name": "typescript-plugin-css-modules" }],
-		"types": ["react/next", "react-dom/next", "vite/client"]
+		"types": ["react/next", "vite/client"]
 	},
 	"extends": "@ece4094/config/typescript/base.json",
 	"include": ["./src"]
