Refactor project structure and build system

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+	"$schema": "https://json.schemastore.org/package.json",
 	"private": true,
 	"name": "ece4094",
 	"workspaces": [
-		"apps/*",
 		"packages/*"
 	],
 	"scripts": {
@@ -10,23 +10,19 @@
 		"clean": "turbo run clean",
 		"develop": "turbo run develop --continue --parallel",
 		"format": "prettier --write .",
-		"storybook": "start-storybook --port 6006",
-		"test": "turbo run test"
+		"storybook": "start-storybook -p 6006",
+		"test": "turbo run test",
+		"build-storybook": "build-storybook"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.17.8",
-		"@storybook/addon-actions": "^6.4.20",
-		"@storybook/addon-essentials": "^6.4.20",
-		"@storybook/addon-interactions": "^6.4.20",
-		"@storybook/addon-links": "^6.4.20",
-		"@storybook/react": "^6.4.20",
-		"@storybook/testing-library": "^0.0.9",
+		"@parcel/packager-ts": "^2.4.1",
+		"@parcel/transformer-typescript-types": "^2.4.1",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
-		"babel-loader": "^8.2.4",
-		"prettier": "^2.6.1",
-		"storybook-dark-mode": "^1.0.9",
-		"turbo": "^1.1.6",
-		"typescript": "^4.6.3",
-		"typescript-plugin-css-modules": "^3.4.0"
+		"parcel": "^2.4.1",
+		"parcel-transformer-ts-css-modules": "^1.0.14",
+		"prettier": "^2.6.2",
+		"shx": "^0.3.4",
+		"turbo": "^1.2.2",
+		"typescript": "^4.6.3"
 	}
 }
