--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/package.json",
 	"private": true,
-	"name": "@ece4094/ui",
+	"name": "@ece4094/app",
 	"source": "./src/index.tsx",
 	"sideEffects": false,
 	"main": "./dist/index.js",
@@ -9,8 +9,11 @@
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"build": "parcel build",
-		"clean": "shx rm -r ./dist",
+		"clean": "shx rm -rf ./dist",
 		"develop": "parcel watch --no-hmr"
+	},
+	"dependencies": {
+		"@ece4094/ui": "*"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.2"
