--- a/packages/app-web/package.json
+++ b/packages/app-web/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"build": "parcel build",
 		"clean": "shx rm -rf ./dist",
-		"develop": "parcel serve"
+		"develop": "parcel serve --port 8000"
 	},
 	"dependencies": {
 		"@ece4094/app": "*",
