--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@parcel/packager-ts": "^2.4.1",
+		"@parcel/transformer-sass": "^2.4.1",
 		"@parcel/transformer-typescript-types": "^2.4.1",
 		"@trivago/prettier-plugin-sort-imports": "^3.2.0",
 		"parcel": "^2.4.1",
