--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -14,8 +14,15 @@
 	},
 	"devDependencies": {
 		"@storybook/addon-essentials": "^6.5.0-alpha",
+		"@storybook/builder-webpack5": "^6.5.0-alpha",
+		"@storybook/manager-webpack5": "^6.5.0-alpha",
+		"@storybook/preset-scss": "^1.0.3",
 		"@storybook/react": "^6.5.0-alpha",
-		"storybook-css-modules-preset": "^1.1.1",
-		"storybook-dark-mode": "^1.0.9"
+		"css-loader": "^6.7.1",
+		"sass": "^1.50.0",
+		"sass-loader": "^12.6.0",
+		"storybook-dark-mode": "^1.0.9",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.72.0"
 	}
 }
