Move TypeScript config into a package

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
 		"develop": "parcel watch --no-hmr"
 	},
 	"dependencies": {
+		"@ece4094/config": "*",
 		"@ece4094/ui": "*"
 	},
 	"devDependencies": {
