--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
 		"clean": "turbo run clean",
 		"develop": "turbo run develop --continue --parallel",
 		"format": "prettier --write .",
-		"storybook": "start-storybook -p 6006",
-		"test": "turbo run test",
-		"build-storybook": "build-storybook"
+		"test": "turbo run test"
 	},
 	"devDependencies": {
 		"@parcel/packager-ts": "^2.4.1",
@@ -23,6 +21,7 @@
 		"parcel-transformer-ts-css-modules": "^1.0.14",
 		"prettier": "^2.6.2",
 		"shx": "^0.3.4",
+		"ts-node": "^10.7.0",
 		"turbo": "^1.2.2",
 		"typescript": "^4.6.3"
 	}
