--- a/packages/app-web/tsconfig.json
+++ b/packages/app-web/tsconfig.json
@@ -1,8 +1,5 @@
 {
 	"$schema": "http://json.schemastore.org/tsconfig",
-	"extends": "../../tsconfig.json",
 
-	"compilerOptions": {
-		"lib": ["DOM", "DOM.Iterable", "ESNext"]
-	}
+	"extends": "@ece4094/config/typescript/web.json"
 }
