--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,5 @@
 {
 	"$schema": "https://json.schemastore.org/package.json",
 	"private": true,
-	"name": "@ece4094/app-desktop"
+	"name": "@ece4094/config"
 }
