--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,5 @@
 {
 	"$schema": "http://json.schemastore.org/tsconfig",
-	"compilerOptions": {
-		"allowUnreachableCode": false,
-		"allowUnusedLabels": false,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
-		"module": "ESNext",
-		"moduleResolution": "Node",
-		"noEmit": true,
-		"noErrorTruncation": true,
-		"noFallthroughCasesInSwitch": true,
-		"noImplicitOverride": true,
-		"noImplicitReturns": true,
-		"noPropertyAccessFromIndexSignature": true,
-		"noUncheckedIndexedAccess": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"target": "ESNext"
-	}
+
+	"extends": "@ece4094/config/typescript/node"
 }
